<resources>
    <string name="app_name">Administrador Financeiro</string>
    <string name="menuConta">Contas a pagar</string>
    <string name="menuAbastecimento">Abastecimento</string>
    <string name="menuExtratoConta">Extrato financeiro</string>
    <string name="menuExtratoAbastecimento">Extrato Abastecimento</string>
    <string name="menuSaque">Saque</string>
    <string name="menuSair">Sair</string>
    <string name="menuConfiguracao">Configuraçoes</string>
    <string name="menuReceita">Receitas</string>

    <string name="labelReceita">Receitas</string>
    <string name="hintValor">Digite o valor:</string>
    <string name="data">Selecione uma data:</string>
    <string name="hintDate">Data:</string>
    <string name="ok">Ok:</string>

    <string name="Entrada">Selecione uma entrada:</string>
    <string name="despesa">Despesas</string>
    <string name="conta">Selecione uma conta:</string>
    <string name="hintConta">Nova conta:</string>

    <string name="abastecimento">Abastecimento</string>
    <string name="hintVlLitro">Valor do litro:</string>
    <string name="hintVlTotal">Total R$:</string>
    <string name="hintLTotal">Total de litros:</string>
    <string name="hintKm">Km percorido:</string>
    <string name="hintPosto">Novo posto ou selecione um:</string>
    <string name="Hodometro">Hodometro</string>

    <string name="formaPagamento">Forma de pagamento</string>
    <string name="pagamentoDinheiro">Dinheiro</string>
    <string name="pagamentoDigital">Pagamento Eletronico</string>

    <string name="salvar">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="gerar">Gerar relatorio</string>

    <string name="veicolo">Veicolos</string>
    <string name="excluir">Excluir</string>
    <string name="posto">Posto</string>
    <string name="contas">Contas</string>
    <string name="tituloConfiguracoa">Configurações:</string>
    <string name="saque">Saquê:</string>
    <string name="title_activity_relatorio">Relatorio</string>
    <string name="btn_relatorio_financeiro">Relatorio financeiro</string>
    <string name="btn_relatorio_abastecimento">Relatorio abastecimento</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tabela">tabela</string>
    <string name="dataInicio">Selecione data do inicio :</string>
    <string name="dataFim">Selecione data do fim:</string>

</resources>