<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/fundoTela"
    android:orientation="vertical"
    tools:context=".Views.ContasActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

      <TextView
          android:id="@+id/titulo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/despesa"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/conta"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:textStyle="bold" />

      <Spinner
          android:id="@+id/spinnerConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/purple_200"
          android:focusable="true"
          android:minHeight="48dp"
          android:prompt="@string/cancel"
          android:textAlignment="center"
          tools:ignore="SpeakableTextPresentCheck" />

      <EditText
          android:id="@+id/idNovaConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusable="auto"
          android:focusableInTouchMode="true"
          android:hint="@string/hintConta"
          android:inputType="text"
          android:onClick="LimparSpiner"
          android:textColorHighlight="@color/cinzaHint"
          android:textColorHint="@color/cinzaHint"
          android:textSize="24sp" />

      <TextView
          android:id="@+id/label3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/formaPagamento"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:textStyle="bold" />

      <RadioGroup
          android:id="@+id/idFormaPaga"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioDi"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/pagamentoDinheiro" />

        <RadioButton
            android:id="@+id/radioEle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pagamentoDigital" />

      </RadioGroup>

      <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/data"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:textStyle="bold" />

      <View
          android:id="@+id/divider2"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?android:attr/listDivider" />

      <Button
          android:id="@+id/idDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hintDate"
          android:onClick="DateClick"
          android:padding="15dp"
          android:textColorHint="@color/black"
          android:textSize="24sp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/idValor"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusable="auto"
          android:focusableInTouchMode="true"
          android:hint="@string/hintValor"
          android:inputType="number|numberDecimal"
          android:textColorHighlight="@color/cinzaHint"
          android:textColorHint="@color/cinzaHint"
          android:textSize="24sp" />

      <EditText
          android:id="@+id/idObsConta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusable="auto"
          android:focusableInTouchMode="true"
          android:hint="@string/hintobs"
          android:inputType="text"
          android:textColorHighlight="@color/cinzaHint"
          android:textColorHint="@color/cinzaHint"
          android:textSize="24sp" />

      <Button
          android:id="@+id/idSalvar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/verde"
          android:onClick="salvarClick"
          android:text="@string/salvar"
          android:textColor="@color/black"
          android:textSize="20sp" />

      <Button
          android:id="@+id/idCancelar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/amarelo"
          android:onClick="cancelar"
          android:text="@string/cancel"
          android:textColor="@color/black"
          android:textSize="20sp" />
    </LinearLayout>
  </ScrollView>


</FrameLayout>