<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".Views.MainActivity">

    <Button
        android:id="@+id/idReceitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/verde"
        android:text="@string/menuReceita"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/idConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/vermelho"
        android:text="@string/menuConta"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/idSaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/amarelo"
        android:text="@string/menuSaque"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/idAbastecimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/verdeClaro"
        android:text="@string/menuAbastecimento"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/idExtratoConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_700"
        android:text="@string/menuRelatorio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/idConfiguracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/roxo"
        android:text="@string/menuConfiguracao"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/idSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/menuSair"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>