<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_saque_scene"
    tools:context=".Views.SaqueActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/fundoTela"
        android:orientation="vertical"
        tools:context=".Views.ReceitaActivity"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saque"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/IdValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintValor"
            android:inputType="number|numberDecimal"
            android:textColorHighlight="@color/cinzaHint"
            android:textColorHint="@color/cinzaHint"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDate"
            android:onClick="DateClick"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:onClick="salvarClick"
            android:text="@string/salvar"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>