<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/key"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundoTela"
    android:textAlignment="center"
    tools:context=".Views.ConfigurcaoActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/fundoTela"
        android:orientation="vertical"
        tools:context=".Views.AbastecimentoActivity">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="auto"
            android:text="@string/tituloConfiguracoa"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idVeicolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:onClick="veicoloClick"
            android:text="@string/veicolo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/idPosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:onClick="postoClick"
            android:text="@string/posto"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/idConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:onClick="contaClick"
            android:text="@string/contas"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/campo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="xx"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerSelecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:minHeight="48dp"
            android:prompt="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/campo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColorHighlight="@color/cinzaHint"
            android:textColorHint="@color/cinzaHint"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/campo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textColorHighlight="@color/cinzaHint"
            android:textColorHint="@color/cinzaHint"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/idExcluir"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:backgroundTint="@color/vermelho"
                android:onClick="excluirClick"
                android:text="@string/excluir"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/idSalvar"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:backgroundTint="@color/verde"
                android:onClick="salvarClick"
                android:text="@string/salvar"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/idCancelar"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:backgroundTint="@color/amarelo"
                android:minHeight="48dp"
                android:onClick="cancelarClick"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>