<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_marginBaseline="2dp"
    tools:context=".Views.SelecaoRelatorioActivity">


    <LinearLayout
        android:id="@+id/layoutSc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_relatorio"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTextInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/dataInicio"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idDateInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/hintDate"
            android:onClick="DateClickInicio"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTextFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dataFim"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idDateFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/hintDate"
            android:onClick="DateClickFim"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idGerarFinanceiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/verde"
            android:onClick="relatorioFinancia"
            android:text="@string/btn_relatorio_financeiro"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/idGerarAbastecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/roxo"
            android:onClick="relatorioAbastecimento"
            android:text="@string/btn_relatorio_abastecimento"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>
